<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".ui.search.MainSearchActivity">

    <!--appbarlayout gives shadow-->
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <com.akarbowy.tagop.ui.search.SearchableToolbarView
            android:id="@+id/toolbar_action_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/state_history_empty"/>

    <include layout="@layout/state_history_empty_filter"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_history"/>

</LinearLayout>
