<resources>
    <!--search history screen-->
    <string name="toolbar_search_title">Szukaj</string>
    <string name="toolbar_search_for_tags">Szukaj pod tagiem #</string>
    <string name="toolbar_action_close">Anuluj</string>
    <string name="toolbar_action_clear_history">Czyść historię</string>
    <string name="symbol_hashtag">#</string>
    <string name="state_history_empty_title">Pusta historia</string>
    <string name="state_history_empty_instruction">Naciśnij \'Szukaj\' by znaleźć wpisy</string>
    <string name="state_history_empty_filter_instruction">Kliknij, aby wyszukać &lt;b>#%1$s&lt;/b></string>
    <string name="dialog_msg_delete">Usunąć tag z historii?</string>
    <string name="dialog_button_ok">Usuń</string>
...
