<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/state_history_empty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/padding_normal"
        android:drawableTop="@drawable/ic_search_history_palette_3_100dp"
        android:gravity="center"
        android:text="@string/state_history_empty_title"
        android:textColor="@color/palette_1"
        android:textSize="22sp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padding_normal"
        android:text="@string/state_history_empty_instruction"
        android:textColor="@color/palette_4"/>
</LinearLayout>
